--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       
       <div class="navbar">
-        <div class="nav-logo">
+        <div class="shopee-logo">
          <a href="#"><img src="shopee-logo.png" alt="logo"></a>
         </div>
         <div class="nav-search">
